# gender-sensitization-engine

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  ANNOTATION_ONE_PAGER.md  BRONZE_TIER_STATUS.md  CLAUDE.md  DATA_COLLECTION_REPORT.md  Dockerfile  Dockerfile.api  JuaKaziPresentation.html  LICENSE  Makefile  PRESENTATION_SUMMARY_NOV20.md  README.md  SCHEMAS_REFERENCE.md  STRATEGIC_ANALYSIS.md  TECHNICAL_ARCHITECTURE_REPORT.md  app.py  compare_models.py  config.py  conftest.py  demo_live.py  docker-compose.yml  gradio_app.py  index.html  presentation.html  pyproject.toml  pytest.ini  railway.toml  requirements.txt  requirements_hf.txt  run_aibridge_evaluation.py  run_evaluation.py  setup.py  test_system.py  tester.py  train_ml_model.py
.streamlit/: config.toml
annotation/: __init__.py  export.py  interface.py  models.py  quality.py  reports.py  schema.py  validator.py
api/: audit.py  disambiguator.py  main.py  ml_rewriter.py  requirements.txt  rules_engine.py  schemas.py  service.py
audit_logs/: reviews.jsonl  rewrites.jsonl
core/: __init__.py  context_checker.py  rules_loader.py  semantic_preservation.py
demos/: annotation_workflow.py  demo_annotation.py  demo_full_pipeline.py  pipeline_config.py  stages.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CURSOR_PROMPT.md  DATA_PROMPTS.md  DEPLOY_WEB.md  F1_IMPROVEMENT.md  INVESTOR_UX_IDEAS.md  RAILWAY_SETUP.md  REPRODUCIBILITY.md  REWRITE_POLICY.md  STRATIFIED_SPLIT.md  SWAHILI_F1_NOTE.md  UI_APPS.md  VERCEL_DEPLOY_STEPS.md  approach_card.md  dataset_datasheet.md  eval_protocol.md  language_expansion_roadmap.md
eval/: __init__.py  ablation_study.py  apply_improvements.py  baseline_comparison.py  baseline_simple.py  bias_detector.py  bias_rules_extractor.py  context_checker.py  correction_evaluator.py  data_loader.py  detector_patterns.py  eval_report_io.py  evaluator.py  external_detector.py  failure_analyzer.py  fairness_metrics.py  ground_truth_en.csv  ground_truth_en_v4.csv  ground_truth_en_v5.csv  ground_truth_fr_v3.csv  ground_truth_fr_v5.csv  ground_truth_ha.csv  ground_truth_ig.csv  ground_truth_ki.csv  ground_truth_ki_v3.csv  ground_truth_ki_v4.csv  ground_truth_sw.csv  ground_truth_yo.csv  hitl_metrics.py  hybrid_detector.py  lexicon_validator.py  metrics.py  metrics_calculator.py  migration_stats.json  ml_classifier.py  ml_detector.py  ml_evaluation.py  models.py  models_simple.py  mt5_corrector.py  (+9 more)
ml/: colab_finetune.ipynb  kaggle_finetune.ipynb  kaggle_finetune_v3.ipynb  kaggle_finetune_v4.ipynb  train_classifier.py
public/: index.html
review_ui/: app.py
rules/: _lexicon_ki_v3_candidates_preview.csv  kikuyu_purist_bias_lexicon_110_rows.csv  lexicon_en_v2.csv  lexicon_en_v3.csv  lexicon_fr_v2.csv  lexicon_fr_v3.csv  lexicon_ha_v2.csv  lexicon_ig_v2.csv  lexicon_ki_corpus.csv  lexicon_ki_transcripts.csv  (+5 more)
(+189 files in other folders)
